Finish up HTML and CSS

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="./assets/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet">
+
   <title> Recipe page</title>
 </head>
 
@@ -32,13 +36,71 @@
       </ul>
     </div>
 
-    <div id="inner-ingredients">
-      <ul id="inner-ingredients-lists">2-3 large eggs</ul>
-      <ul id="inner-ingredients-lists">Salt, to taste</ul>
-      <ul id="inner-ingredients-lists">Pepper, to taste</ul>
-      <ul id="inner-ingredients-lists">1 tablespoon of butter or oil</ul>
-      <ul id="inner-ingredients-lists">Optional fillings: cheese, diced vegetables, cooked meats, herbs</ul>
+    <div class="inner-ingredients">
+      <h2>Ingredients</h2>
+
+      <ul class="inner-ingredients-lists">
+        <li>2-3 large eggs</li>
+        <li>Salt, to taste</li>
+        <li>Pepper, to taste</li>
+        <li>1 tablespoon of butter or oil</li>
+        <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+      </ul>
     </div>
+
+    <div class="inner-instructions">
+      <h2>Instructions</h2>
+
+      <ol class="inner-instructions-orderLists">
+        <li><strong>Beat the eggs: </strong><span>In a bowl, beat the eggs with pinch of salt and pepper, until they are
+            well
+            mixed. you can add a tablespoon of water or milk for a fluffer texture.</span>
+        </li>
+        <li><strong>Heat the pan: </strong><span>Place a none-stick frying pan over medium heat and add butter or
+            oil.</span>
+        </li>
+        <li><strong>Cook the omelette: </strong><span>Once the butter is melted and bubbling, pour in the eggs. Tilt the
+            pan
+            to ensure the eggs evenly coat the surface.</span>
+        </li>
+        <li><strong>Add fillings (optional): </strong><span>When the eggs begin to set at the edges but are still
+            slightly
+            runny in the middle, sprinkle your chosen fillings over one half of the omelette.</span></li>
+        <li><strong>Fold and serve: </strong><span>As the omelette continues to cook, carefully lift one edge and fold
+            it over
+            the fillings. Let it cook for another minute, then slide it onto a plate.</span>
+        </li>
+        <li><strong>Enjoy: </strong><span>Serve hot, with additional salt and pepper if needed.</span>
+        </li>
+      </ol>
+    </div>
+
+    <div class="inner-nutrition">
+      <h2>Nutrition</h2>
+
+      <span>The table below show nutritional values per serving with the addtional fillings</span>
+
+      <table>
+        <tr>
+          <th>Calories</th>
+          <th><strong>277kcal</strong></th>
+        </tr>
+        <tr>
+          <th>Carbs</th>
+          <th><strong>0g</strong></th>
+        </tr>
+        <tr>
+          <th>Protein</th>
+          <th><strong>20g</strong></th>
+        </tr>
+        <tr>
+          <th>Fat</th>
+          <th><strong>22g</strong></th>
+        </tr>
+      </table>
+    </div>
+
+
 
   </div>
 </body>
